# mushrust

./: Cargo.toml  build.sh  run_monitor.sh  upload.sh
.cargo/: config.toml
migrations/: 20201027_1_Initial_measurements_schema.sql
src/: domain.rs  main.rs  monitor.rs
ui/: index.html
