[package]
name = "mushrust"
version = "0.1.0"
authors = ["erdeszt <erdeszt@gmail.com>"]
edition = "2018"

[[bin]]
name = "firmware"
path = "src/main.rs"
required-features = ["firmware-bin"]

[[bin]]
name = "monitor"
path = "src/monitor.rs"
required-features = ["monitor-bin"]

[dependencies]
gpio-cdev = { version = "0.4.0", optional = true }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["sqlite", "runtime-async-std", "macros"], optional = true }
async-std = { version = "1.5.0", features = ["attributes"], optional = true }
plotters = { version = "0.3.0", optional = true }

[features]
firmware-bin = ["gpio-cdev", "sqlx", "async-std"]
monitor-bin = ["plotters", "sqlx", "async-std"]

[dependencies.openssl]
version = "0.10.29"
features = ["vendored"]
