[package]
name = "mushrust"
version = "0.1.0"
authors = ["erdeszt <erdeszt@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.7.1"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
gpio-cdev = "0.4.0"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
warp = "0.2"

[dependencies.openssl]
version = "0.10.29"
features = ["vendored"]
